--- a/semana1/sistema-loja/style.css
+++ b/semana1/sistema-loja/style.css
@@ -20,12 +20,12 @@ header{
 }
 .link-pai{
     background-color: aliceblue;
-    padding: 10px;
-    display: inline;
+    padding: 1px;
+    margin: auto;
 }
 .link{
-    margin-right: 170px;
-    padding: 20px;
+    margin-right: 60px;
+    padding: 10px;
     font-weight: bold;
 }
 .conteudo{
@@ -67,4 +67,45 @@ footer p{
     padding: 20px;
     text-align: center;
     font-size: 20px;
+}
+.tabela{
+    margin: auto;
+}
+/* formulario*/
+.centro{
+    border: 1px solid black;
+    margin: auto;
+}
+.formulario{
+    text-align: center;
+}
+.label{
+    height: 100px;
+}
+button{    
+    width: 150px;
+    text-align: center;
+    padding: 5px 15px;
+    border: 4px solid black;
+    font-size: 18px;
+    cursor: pointer;
+}
+.dinheiro{
+    display: block;
+}
+.botao-dinheiro:active{
+    background-color: lightblue;
+}
+.botao-cartao:active{
+    background-color: lightblue;
+}
+.tablea-venda{
+    text-align: center;
+    margin: auto;
+}
+.td-venda{
+    padding: 100px;
+}
+#controle{
+    text-align: center;
 }
