--- a/semana1/bugfixes/index.css
+++ b/semana1/bugfixes/index.css
@@ -67,7 +67,10 @@ div img {
   *  ESTILOS HOME 
   *
   **/
-
+.texto-container{
+    padding: 200px;
+    
+}
 #container-de-descricao {
     background-color: #2274a5;
     color: white;
