--- a/semana1/bugfixes/index.css
+++ b/semana1/bugfixes/index.css
@@ -114,6 +114,11 @@ td button {
     border-radius: 5px;
     color: black;
 }
+td img{
+    height: 50px;
+    width: 50px;
+    background-color: white;
+}
 
 .container-do-search {
     margin-top: 20px;
