--- a/semana1/bugfixes/index.css
+++ b/semana1/bugfixes/index.css
@@ -114,7 +114,10 @@ td button {
     width: 150px;
     height: 30px;
     border-radius: 5px;
-    color: black;
+    /* color: black; */
+}
+td button:hover{
+    background-color: #b69606;
 }
 td img{
     height: 50px;
