--- a/semana1/bugfixes/index.css
+++ b/semana1/bugfixes/index.css
@@ -98,6 +98,10 @@ div img {
   *  ESTILOS COMPRAR 
   *
   **/
+.texto-busca{
+    border: 1px solid white;
+    border-bottom: 3px solid black ;
+}
 
 div:nth-child(2),
 div:last-child {
