--- a/semana2/aula7-flexboxGrid/exercicio3/exercicio3a/exercicio3a.css
+++ b/semana2/aula7-flexboxGrid/exercicio3/exercicio3a/exercicio3a.css
@@ -3,24 +3,40 @@ body {
     height: 100vh;
     padding: 0;
     margin: 0;
-    font-size: 10px;
+    font-size: 20px;
     color: white;
 }
-.main-container{
-    
+#top-container{
+    display: flex;
+    height: 70px;
+    flex-direction: row;
+    justify-content: space-between;
 }
 .green-background {
+    display: flex;
     background-color: green;
+    width: 20%;
+    justify-content: center;
+    align-items: center;
+    
 }
 
 .yellow-background {
+    display: flex;
     background-color: yellow;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
 }
 
 .pink-background {
+    display: flex;    
     background-color: fuchsia;
 }
-
+#middle-container{
+    display: flex;
+    flex-direction: row;
+}
 .blue-background {
     background-color: blue;
 }
@@ -35,4 +51,5 @@ body {
 
 .purple-background {
     background-color: purple;
+    height: 70px;
 }
